# todos-fastapi

./: .cursorignore  .dockerignore  .editorconfig  .env.example  .env.production.example  .gitguardian.yaml  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.app.base.yml  docker-compose.app.with-infra.yml  docker-compose.infra.yml  pyproject.toml
.cursor/: mcp.json
.cursor/skills/alembic-migrate/: SKILL.md
.cursor/skills/alembic-migrate/scripts/: run.sh
.cursor/skills/db-local-ops/: SKILL.md
.cursor/skills/db-local-ops/scripts/: run.sh
.cursor/skills/podman-compose/: SKILL.md
.cursor/skills/podman-compose/scripts/: run.sh
.cursor/skills/ruff-check-format/: SKILL.md
.cursor/skills/ruff-check-format/scripts/: run.sh
.cursor/skills/run-checks/: SKILL.md
.cursor/skills/run-checks/scripts/: run.sh
.cursor/skills/run-pyright/: SKILL.md
.cursor/skills/run-pyright/scripts/: run.sh
.cursor/skills/run-tests/: SKILL.md
.cursor/skills/run-tests/scripts/: run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1fd4467961ec_initial_schema.py  2422881b19ef_add_token_version_and_case_insensitive_.py
config/: base.toml  ports.env
config/profiles/: example.toml  production.example.toml  test.toml
docs/: api.http  api.md  architecture.md  authentication.md  database.md  deployment.md  development.md  getting-started.md  json-schemas.md  mcp.md  secrets.md  test-benchmark.md
docs/diagram/: auth_sequence.puml  hexagonal_overview.puml  layer_containers.puml  todo_stack_components.puml
mcp/todos-backend/: README.md  openapi.snapshot.json  pyproject.toml
mcp/todos-backend/src/todos_mcp/: __main__.py  client.py  config.py  scripts_runner.py  server.py  session.py
mcp/todos-backend/src/todos_mcp/tools/: _helpers.py  auth.py  health.py  lifecycle.py  todos.py  users.py
mcp/todos-backend/tests/: test_client.py  test_config.py  test_integration.py  test_scripts_runner.py  test_session.py
schemas/json/: LoginRequest.schema.json  TodoCreate.schema.json  TodoListResponse.schema.json  TodoPatch.schema.json  TodoResponse.schema.json  TodoUpdate.schema.json  TokenResponse.schema.json  UserAdminPatch.schema.json  UserAdminReplace.schema.json  UserResponse.schema.json  UserSelfPatch.schema.json  UserSelfReplace.schema.json  UserSignup.schema.json  bundle.schema.json  index.json
scripts/: audit_deps.sh  export_json_schemas.sh  install_podman.sh  install_shellcheck.sh  lib.sh  migrate.sh  ports.sh  reinstall.sh  render_diagrams.sh  run_checks.sh  run_ci.sh  run_coverage.sh  run_mcp_tests.sh  run_pyright.sh  run_ruff.sh  run_tests.sh  seed.sh  start.sh  verify_stack.sh  wipe.sh
scripts/checks/: _common.sh  ci.sh  mcp_tests.sh  pyright.sh  ruff.sh  tests.sh
scripts/container/: build.sh  common.sh  deploy.sh  down.sh  entrypoint.sh  logs.sh  up.sh
scripts/container/internal/: common.sh  entrypoint.sh
scripts/database/: common.sh  container_ops.sh  ensure.sh  infra_compose.sh  migrate.sh  postgresql.sh  seed.sh  setup.sh  valkey.sh  wipe.sh
scripts/database/internal/: common.sh  container_ops.sh  ensure.sh  infra_compose.sh  postgresql.sh  setup.sh  valkey.sh
scripts/internal/: env_urls.sh  load_env.sh  ports.sh
scripts/mcp/: export_openapi.sh
scripts/quality/: benchmark_pytest.sh  checks.sh  pyright.sh  ruff.sh  shellcheck.sh  tests.sh
scripts/quality/internal/: audit_deps.sh  benchmark_pytest.sh  gate.sh  gate_emit.py  lib.sh  mcp_tests.sh
scripts/run/: checks.sh  mcp_tests.sh  pyright.sh  ruff.sh  tests.sh
scripts/verify/: bare_metal.sh  common.sh  compose.sh  http.sh  verify_stack.sh
scripts/verify/internal/: bare_metal.sh  common.sh  compose.sh  http.sh
src/env_config/: __init__.py  __main__.py  export.py  loader.py  names.py  schema.py
src/env_config/profiles/: example.py  production.example.py  test.py
src/todos_app/: main.py
src/todos_app/api/: openapi_responses.py
src/todos_app/api/auth/: router.py  schemas.py
src/todos_app/api/health/: router.py
src/todos_app/api/schema_export/: export.py  registry.py
src/todos_app/api/todos/: mappers.py  pagination.py  router.py  schemas.py
src/todos_app/api/users/: mappers.py  router.py  schemas.py
src/todos_app/application/: auth.py  errors.py  todos.py  users.py
src/todos_app/core/: auth.py  dependencies.py  error_responses.py  exceptions.py  http_errors.py  logging.py  rate_limiting.py  settings.py
src/todos_app/core/config/: export.py  flatten.py  loader.py  merge.py  schema.py
src/todos_app/domain/: ids.py
src/todos_app/domain/auth/: access_token_issuer.py  access_token_verifier.py  authenticated_user.py  authorization.py  decoded_token.py  password_hasher.py  user_auth_cache.py
src/todos_app/domain/todos/: entity.py  field_limits.py  page.py  repository.py
src/todos_app/domain/users/: entity.py  field_limits.py  repository.py
src/todos_app/infrastructure/auth/: argon2_password_hasher.py  jwt_access_token_issuer.py  jwt_access_token_verifier.py
tests/: conftest.py  env_helpers.py  factories.py
tests/fakes/: fast_password_hasher.py  todo_repository.py  user_auth_cache.py  user_repository.py
tests/integration/: conftest.py
tests/integration/api/: conftest.py  helpers.py  rate_limit_helpers.py  test_auth.py  test_health.py  test_rate_limiting.py  test_security.py  test_todo_routes.py  test_user_routes.py
tests/integration/persistence/: test_migrations.py  test_todo_repository.py  test_user_repository.py
tests/unit/api/: test_schema_export.py  test_todo_mappers.py  test_todo_schemas.py  test_user_mappers.py
tests/unit/application/: test_auth_use_cases.py  test_todo_use_cases.py  test_user_use_cases.py
tests/unit/core/: test_auth_cache.py  test_error_responses.py  test_settings.py
tests/unit/core/config/: test_export.py  (+3 more)
tests/unit/domain/: test_authorization.py
tests/unit/env_config/: test_loader.py
tests/unit/fakes/: test_fake_user_repository.py  test_user_repository.py
tests/unit/infrastructure/: test_jwt_access_token_verifier.py
tools/: README.md
(+20 files in other folders)
