[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todos-mcp"
version = "0.1.0"
description = "MCP server for managing the FastAPI todos backend API and local dev stack."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"httpx>=0.28.0",
	"mcp[cli]>=1.9.0",
	"python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
	"basedpyright>=1.29",
	"pytest>=8.0",
	"pytest-asyncio>=0.24",
	"ruff",
]

[project.scripts]
todos-mcp = "todos_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
# F = Pyflakes, I = isort, E = pycodestyle, S = flake8-bandit, B = flake8-bugbear
select = ["F", "I", "E", "S", "B"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108"]
# bash/curl are intentional — scripts_runner executes known shell scripts
"src/todos_mcp/scripts_runner.py" = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
	"integration: tests that require a running API",
]

[tool.basedpyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingTypeStubs = false
executionEnvironments = [
	{ root = "src/todos_mcp/tools", reportUnusedFunction = false },
	{ root = "src" },
]
